static/css/admin.css
#raffle_notes {
    width: 28em;
    height: 10em;
}

#raffle_subheader {
    width: 5em;
}

#raffle_time {
    width: 20em;
}

#raffle_cost {
    width: 4em;
}

#output_data {
    width: 60em;
    padding: 0;
}

.prize_number {
    width: 1.5em;
    font-size: 1em;
    padding-right: 1em;
}

.htNumeric.htDimmed {
    background-color: #fff0f5;
}

.prize_delete, .prize_finalise, .prize_roll {
    width: 100%;
}

.delete_button, .finalise_button, .roll_button {
    width: 10%;
    text-align: center;
    vertical-align: top;
}

#add_prize_block {
    margin-top: 2em;
}

.finalised {
    background-color: lightgreen;
}

#dropzone {
    width: 4em;
    height: 3em;
}

#import_data,
#confirm_data,
#barter_data,
#paid_data {
    height: 90%;
}

#import_template,
#confirm_template,
#barter_template,
#paid_template {
    display: none;
}

#import_data_here {
    width: 100%;
}

.import,
.confirm,
.barter,
.paid {
    background-color: #f8f8f8;
    border: 1px solid #000000;
    padding: 2px;
    color: #000000;
}

div#paid_template {
    background-color: #f8f8f8 !important;
    border: 1px solid #000000 !important;
    padding: 2px !important;
    position: absolute !important;
    z-index: 100 !important;
}

div#paid_data {
    background-color: #f8f8f8 !important;
    padding: 5px !important;
}

div#paid_buttons {
    background-color: #f8f8f8 !important;
    padding: 5px !important;
    border-bottom: 1px solid #ccc !important;
}

#confirm_string,
#confirm_names,
#barter_import_string,
#barter_confirm_string,
#paid_import_string,
#paid_confirm_string {
    width: 95%;
    height: 10em;
}

/* Popup content should always render dark text on light backgrounds */
#import_template,
#import_template *,
#confirm_template,
#confirm_template *,
#barter_template,
#barter_template *,
#paid_template,
#paid_template * {
    color: #000000 !important;
    opacity: 1 !important;
}

#import_template input,
#import_template textarea,
#confirm_template input,
#confirm_template textarea,
#barter_template input,
#barter_template textarea,
#paid_template input,
#paid_template textarea {
    color: #000000 !important;
    background-color: #ffffff !important;
}

